terraform/ec2.tf
# Amazon Linux 2 の最新版AMIを取得
data "aws_ssm_parameter" "amzn2_latest_ami" {
  name = "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
}

# EC2
resource "aws_instance" "alb-ec2-instance" {
  ami = data.aws_ssm_parameter.amzn2_latest_ami.value
  instance_type = "t2.micro"
  availability_zone = "ap-northeast-1a"
  subnet_id = aws_subnet.alb-ec2-subnet-public-1a.id
  vpc_security_group_ids = [ aws_security_group.alb-ec2-sg.id ]
  associate_public_ip_address = true

  tags = {
    "Name" = "alb-ec2-instance"
  }
}
